--- a/data/second-post.mdx
+++ b/data/second-post.mdx
@@ -18,4 +18,7 @@ This is my secando blog!!!
 
 My favorite search engine is [Duck Duck Go](https://duckduckgo.com).  
 
-![Hola](https://drive.google.com/file/d/1S83_MdIcQ_RfYC2LwYdSkkiCxVBlFS4p/view?usp=sharing)
+| Syntax      | Description |
+| ----------- | ----------- |
+| Header      | Title       |
+| Paragraph   | Text        |
