Landing finished & portfolio started

--- a/data/second-post.mdx
+++ b/data/second-post.mdx
@@ -2,6 +2,8 @@
 title: 'My secando blog'
 date: '15-10-2022'
 author: 'fandres51'
+img: 'https://catracalivre.com.br/wp-content/uploads/2022/03/cursos-marketing-digital.jpg'
+keywords: 'ux,code,design,art'
 ---
 
 # Second time posting
