--- a/data/gearfofofoofour.mdx
+++ b/data/gearfofofoofour.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Gear tirdo'
+title: 'Gear fofofoffoofur'
 date: '14-10-2022'
 author: 'fandres51'
 img: 'https://catracalivre.com.br/wp-content/uploads/2022/03/cursos-marketing-digital.jpg'
-keywords: 'ux,code,art'
+keywords: 'code,art'
 ---
 
 # Yes I am
