--- a/data/helloworld.mdx
+++ b/data/helloworld.mdx
@@ -3,7 +3,7 @@ title: 'My first blog'
 date: '14-10-2022'
 author: 'fandres51'
 img: 'https://catracalivre.com.br/wp-content/uploads/2022/03/cursos-marketing-digital.jpg'
-keywords: 'ux,code,art'
+keywords: 'code,art'
 ---
 
 # Hello Everybody!
