ready to upload

--- a/data/portfolio/asosoft.mdx
+++ b/data/portfolio/asosoft.mdx
@@ -1,8 +1,9 @@
 ---
 title: 'AsoSoft'
-date: '14-10-2022'
+date: '14-06-2021'
 author: 'fandres51'
-img: 'https://catracalivre.com.br/wp-content/uploads/2022/03/cursos-marketing-digital.jpg'
+img: '/images/galery/ux.jpg'
+bannerimg: '/images/galery/ux.jpg'
 keywords: 'code'
 ---
 
