--- a/data/portfolio/fandres51-web.mdx
+++ b/data/portfolio/fandres51-web.mdx
@@ -1,9 +1,10 @@
 ---
-title: 'fandres51's webpage'
-date: '14-10-2022'
+title: 'fandres51 Web'
+date: '22-10-2022'
 author: 'fandres51'
-img: 'https://catracalivre.com.br/wp-content/uploads/2022/03/cursos-marketing-digital.jpg'
-keywords: 'code, ux, marketing'
+img: '/images/galery/marketing.jpg'
+bannerimg: '/images/galery/marketing.jpg'
+keywords: 'code'
 ---
 
 In this section, I will talk about the webpage you are seeing right now.
