spanish section links fixed

--- a/data/portfolio/asosoft.mdx
+++ b/data/portfolio/asosoft.mdx
@@ -12,3 +12,7 @@ create a management system for the Systems Engineer Council. This also worked
 as the final project of my career.
 
 You can check out this project on [Github](https://github.com/fandres51/proyectointegrador-enriquez-yaselga)
+
+    Hi, I am a software engineer who got caught in marketing and creativity after being graduated. 
+    As my formation was, I love technology, so I try to combine the best of coding, user experience design and digital marketing in my work.
+    If you need a job related to any of those areas, get in touch with me so we can talk.
